# CtxKG

./: .env.sample  .flake8  .gitignore  README.md  blab_eval_full.py  build_bridges.py  build_encoded_triples.py  build_graphs.py  build_kg_bridges.py  build_kg_nodes.py  build_sentences.py  build_triples.py  build_triples_v2.py  clean_graphs.py  clean_nodes.py  cli_args.py  constants.py  doc_similarity.py  group_graphs.py  main.py  match_docs.py  merge_nodes.py  pyproject.toml  requirements.txt  view.html
app/: __init__.py  package-lock.json  package.json  tailwind.config.js  webpack.config.js
app/controllers/: __init__.py  home.py
app/static/: base.css  header.css  tailwind.css
app/templates/: base.j2  header.j2  home.j2
data/: README.md
documents/: README.md
documents/en/: README.md
encoded_triples/: README.md
graphs/: README.md
graphs/en/: README.md
kg_nodes/: README.md
open_ie/: README.md  TripleBuilder.java
openie/: Entity.java  EntitySplitter.java  README.md  Triple.java  TripleBuilder.java
results/: README.md  article_nodes.json.sample
samples/: abstract_0.json  abstract_1.json  abstract_10.json  abstract_11.json  abstract_12.json  abstract_13.json  abstract_2.json  abstract_3.json  abstract_4.json  failed_files.txt.sample  nodes.json.sample  sentences.txt.sample  triples.txt.sample
sentences/: README.md
src/: constants.py  encoder.py  entity.py  graph.py  languages.py  link.py  token_tree.py  token_tree_node.py  triple.py
triplebuilder/: pom.xml
view/: colors.js  graph.js  index.css  index.html  index.js  navigation.js  scale.js
(+1947 files in other folders)
