[tool.poetry]
name = "ctxkg"
version = "1.0.0"
description = ""
authors = ["Pedro Ligabue <pedroligabue@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
requests = "^2.31.0"
tqdm = "^4.66.1"
tensorflow-io-gcs-filesystem = "0.27.0"
tensorflow = "2.10"
tensorflow-hub = "^0.14.0"
flask = "^2.3.3"
triple-extractor-ptbr-pligabue = {git = "https://github.com/Pligabue/PTBR-OpenIE.git", rev = "master"}
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
